[package]
name = "blink"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = "0.2.6"
embedded-time = "0.12.0"
rp2040-boot2 = "0.2"
usb-device = "0.2.8"
usbd-serial = "0.1.1"

[dependencies.rp2040-hal]
# Latest version on crates.io (0.2) doesn't support USB.
git = "https://github.com/rp-rs/rp-hal"
branch = "main"
version = "0.3"
features = ["rt"]
