[package]
name = "pico-usb-console"
version = "0.1.0"
edition = "2021"

[features]
default = ["panic"]
panic = []

[dependencies]
cortex-m = "0.7.5"
log = "0.4"
rp2040-hal = "0.5"
usb-device = "0.2.8"
usbd-serial = "0.1.1"

[dev-dependencies]
cortex-m-rt = "0.7.1"
embedded-time = "0.12.0"
rp2040-boot2 = "0.2"
