[package]
name = "pico-wireless"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.6"
embedded-time = "0.12.0"
log = "0.4"
pico-usb-console = { path = "../pico-usb-console" }
rp2040-boot2 = "0.2"
rp2040-hal = { version = "0.4", features = ["rt"] }
rp2040-pac = "0.3"
